--- a/package.json
+++ b/package.json
@@ -42,14 +42,14 @@
     "@types/node": "^22.10.1",
     "@types/better-sqlite3": "^7.6.12",
     "@types/express": "^4.17.21",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "tsc-alias": "^1.8.10"
   },
   "devDependencies": {
     "tsx": "^4.19.2",
     "vitest": "^2.1.8",
     "@vitest/coverage-v8": "^2.1.8",
     "eslint": "^9.15.0",
-    "prettier": "^3.3.3",
-    "tsc-alias": "^1.8.10"
+    "prettier": "^3.3.3"
   }
 }
